# taxfix_submission

./: .gitignore  README.md  docker-compose.yaml
data_pipelines/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
data_pipelines/data_pipelines/: __init__.py  assets.py  extract_users_cdc.py  queries.py  transform_and_load_users.py
data_pipelines/tests/integration/: test.jsonl  test_dags.py  test_extract_user_cdc.py
data_pipelines/tests/unit/: test_extract_user_cdc.py
datalake/bronze/users/2026/02/05/16/23/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/24/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/25/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/26/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/27/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/28/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/29/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/30/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/31/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/32/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/33/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/34/: events-20260223_143220.jsonl
datalake/bronze/users/2026/02/05/16/35/: events-20260223_143220.jsonl
reports/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
reports/reports/: user_report.py
(+3 files in other folders)
